<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>co.uk.Motorola.esn</groupId>
    <artifactId>Motorola-esn-automation-testing</artifactId>
    <version>1.0.0</version>
    <description>Motorola ESN Project - Automated tests</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <custom.folder>config</custom.folder>
        <surefire.thread.count>5</surefire.thread.count>
        <surefire.fork.count>0</surefire.fork.count>
        <surefire.rerunFailingTestsCount>0</surefire.rerunFailingTestsCount>
        <features>src/test/resources/features</features>
        <testFailureIgnore>true</testFailureIgnore>
        <driverType>$driver</driverType>
        <jenkinsStyleReports>true</jenkinsStyleReports>
        <chromeDriverPath>${basedir}\src\main\resources\drivers\chromedriver.exe</chromeDriverPath>
        <!--<chromeDriverPath>${basedir}/src/main/resources/drivers/chromedriver</chromeDriverPath>-->
        <ieDriverPath>${basedir}\src\main\resources\drivers\IEDriverServer.exe</ieDriverPath>
        <geckoDriverPath>${basedir}\src\main\resources\drivers\geckodriver.exe</geckoDriverPath>
        <!--<phantomjsDriverPath>${basedir}\src\main\resources\drivers\phantomjs.exe</phantomjsDriverPath>-->
        <generated.runner.directory>${project.build.directory}/parallel/runners</generated.runner.directory>
        <generated.feature.directory>${project.build.directory}/parallel/features</generated.feature.directory>
        <maven.build.helper.plugin.version>3.2.0</maven.build.helper.plugin.version>
        <java.version>1.8</java.version>
        <junit.version>4.13.1</junit.version>
        <cucumber.version>6.9.0</cucumber.version>
        <selenium.webdriver.version>4.0.0-alpha-3</selenium.webdriver.version>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
        <slf4j.version>1.7.30</slf4j.version>
        <logLevel>WARN</logLevel>
        <parallelScheme>scenarios</parallelScheme>
        <numberOfRunners>0</numberOfRunners>
        <tags>default</tags>
        <reportPhase>test</reportPhase>
        <parallel>all</parallel>
        <skip.test>false</skip.test>

    </properties>

    <profiles>
        <profile>
            <id>jenkins</id>
        </profile>
        <profile>
            <id>TEST</id>
            <properties>
                <env>TEST</env>
                <ux>https://www.amazon.co.uk</ux>
                <guiapplication>https://www.amazon.co.uk</guiapplication>
                <ossui>https://www.amazon.co.uk</ossui>
                <bssui>https://www.amazon.co.uk</bssui>
                <kodiak>https://www.amazon.co.uk</kodiak>
                <prime>https://www.amazon.co.uk</prime>
            </properties>
        </profile>

        <profile>
            <id>reporting</id>
            <properties>
                <jenkinsStyleReports>true</jenkinsStyleReports>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.trivago.rta</groupId>
                <artifactId>cucable-plugin</artifactId>
                <version>1.8.0</version>
                <executions>
                    <execution>
                        <id>generate-test-resources</id>
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>parallel</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- Required properties -->
                    <sourceRunnerTemplateFile>src/test/resources/Parallel/CucableJavaTemplate.java</sourceRunnerTemplateFile>
                    <sourceFeatures>${features}</sourceFeatures>
                    <generatedFeatureDirectory>${generated.feature.directory}</generatedFeatureDirectory>
                    <generatedRunnerDirectory>${generated.runner.directory}</generatedRunnerDirectory>

                    <!-- Optional properties -->
                    <numberOfTestRuns>1</numberOfTestRuns>
                    <includeScenarioTags>${tags}</includeScenarioTags>
                    <logLevel>default</logLevel>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>${maven.build.helper.plugin.version}</version>
                <executions>
                    <execution>
                        <id>add-test-source</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>add-test-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${generated.runner.directory}</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <!--<version>${jacoco.version}</version>-->
                <version>0.8.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <forkCount>${surefire.fork.count}</forkCount>
                    <parallel>${parallel}</parallel>
                    <threadCount>${surefire.thread.count}</threadCount>
                    <rerunFailingTestsCount>${surefire.rerunFailingTestsCount}</rerunFailingTestsCount>
                    <argLine>-Duser.language=en</argLine>
                    <argLine>-Xmx1024m</argLine>
                    <argLine>-XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <useFile>false</useFile>
                    <testFailureIgnore>${testFailureIgnore}</testFailureIgnore>
                    <runOrder>alphabetical</runOrder>
                    <includes>
                        <include>**/*IT.class</include>
                    </includes>
                    <systemPropertyVariables>
                        <!--suppress UnresolvedMavenProperty -->
                        <profileId>${env}</profileId>
                        <driverType>${driverType}</driverType>
                        <webdriver.chrome.driver>${chromeDriverPath}</webdriver.chrome.driver>
                        <webdriver.ie.driver>${ieDriverPath}</webdriver.ie.driver>
                        <webdriver.gecko.driver>${geckoDriverPath}</webdriver.gecko.driver>
                        <!--suppress UnresolvedMavenProperty -->
                        <UX>${ux}</UX>
                        <!--suppress UnresolvedMavenProperty -->
                        <GUIApplication>${guiapplication}</GUIApplication>
                        <!--suppress UnresolvedMavenProperty -->
                        <OSSUI>${ossui}</OSSUI>
                        <!--suppress UnresolvedMavenProperty -->
                        <BSSUI>${bssui}</BSSUI>
                        <!--suppress UnresolvedMavenProperty -->
                        <KODIAK>${kodiak}</KODIAK>
                        <!--suppress UnresolvedMavenProperty -->
                        <PRIME>${prime}</PRIME>
                        <PARALLELSCHEME>${parallelScheme}</PARALLELSCHEME>
                        <logLevel>${logLevel}</logLevel>
                        <jenkinsStyleReports>${jenkinsStyleReports}</jenkinsStyleReports>
                        <org.slf4j.simpleLogger.defaultLogLevel>${logLevel}</org.slf4j.simpleLogger.defaultLogLevel>
                        <surefire.rerunFailingTestsCount>${surefire.rerunFailingTestsCount}</surefire.rerunFailingTestsCount>
                        <surefire.threadCount>${surefire.thread.count}</surefire.threadCount>
                        <surefire.fork.count>${surefire.fork.count}</surefire.fork.count>
                        <skip.test>${skip.test}</skip.test>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>5.4.0</version>
                <executions>
                    <execution>
                        <phase>${reportPhase}</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>cucumber-jvm</projectName>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <mergeFeaturesById>true</mergeFeaturesById>
                            <skip>${skip.test}</skip>
                            <jsonFiles>
                                <param>**/*.json</param>
                            </jsonFiles>
                            <classificationFiles>
                            </classificationFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.webdriver.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-remote-driver</artifactId>
            <version>${selenium.webdriver.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-support</artifactId>
            <version>${selenium.webdriver.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-htmlunit-driver</artifactId>
            <version>2.52.0</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-core</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>selenium</artifactId>
            <version>1.15.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>4.1.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>4.1.2</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.json</artifactId>
            <version>1.1.4</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20200518</version>
        </dependency>
        <dependency>
            <groupId>com.github.jesg</groupId>
            <artifactId>phantomjsdriver</artifactId>
            <version>2.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.18.1</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.fighting-layout-bugs</groupId>
            <artifactId>fighting-layout-bugs</artifactId>
            <version>0.6</version>
        </dependency>
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>7.3.0</version>
        </dependency>
        <dependency>
            <groupId>net.lightbody.bmp</groupId>
            <artifactId>browsermob-core</artifactId>
            <version>2.1.5</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.14.0</version>
        </dependency>
        <dependency>
            <groupId>com.predic8</groupId>
            <artifactId>soa-model-core</artifactId>
            <version>1.6.3</version>
        </dependency>
        <dependency>
            <groupId>net.masterthought</groupId>
            <artifactId>cucumber-reporting</artifactId>
            <version>5.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>2.0.15</version>
        </dependency>
        <dependency>
            <groupId>de.sstoehr</groupId>
            <artifactId>har-reader</artifactId>
            <version>2.1.10</version>
        </dependency>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>5.3</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>2.12.0-rc2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.12.0-rc2</version>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
        </dependency>
        <dependency>
            <groupId>com.saucelabs</groupId>
            <artifactId>ci-sauce</artifactId>
            <version>1.151</version>
        </dependency>
        <dependency>
            <groupId>com.google.api-client</groupId>
            <artifactId>google-api-client</artifactId>
            <version>1.31.1</version>
        </dependency>
        <dependency>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis</artifactId>
            <version>1.4.01</version>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>4.2.2</version>
        </dependency>
    </dependencies>
</project>
